# GPS-pure-puirsuit

./: README.md
mathew/: CMakeLists.txt  package.xml  urdf.rviz
mathew/config/: gps_localization_config.yaml  joint_names_URDF Robot.SLDASM.yaml  ukf.yaml
mathew/launch/: amcl.launch  display.launch  gazebo.launch  gmapping.launch  gps_dwa.launch  gps_dwa_pure_puirsuit.launch  gps_waypoint_node.launch  hector_mapping.launch  imu.launch  localization.launch  mathew.launch  mathew_navigation.launch  mathew_slam.launch  mathew_world.launch  mathew_world_2.launch  merge_laser.launch  move_base.launch  rtab.launch  rtab_rviz.launch  test_planner.launch  test_position.launch  test_pure_puirsuit.launch
mathew/maps/: empty.yaml
mathew/maps copy/: my_map.yaml
mathew/meshes/: IMU_Link.STL  Lidar_01_Link.STL  Lidar_02_Link.STL  OD_Front_Left_Link.STL  OD_Front_Right_Link.STL  OD_Rear_Left_Link.STL  OD_Rear_Right_Link.STL  Robot_base_link.STL
mathew/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_2.yaml  dwa_local_planner_params_3.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mathew.yaml  navigation_params.yaml
mathew/rviz/: display.rviz  mapping.rviz  mathew.rviz  navigation.rviz  test.rviz
pc2l/: package.xml
pp_path_planner_pkg/: CMakeLists.txt  package.xml
pure_puirsuit_dwa_local_planner/: CMakeLists.txt  blp_plugin.xml  package.xml
pure_puirsuit_dwa_local_planner/cfg/: DWAPlanner.cfg
pure_puirsuit_dwa_local_planner/include/pure_puirsuit_dwa_local_planner/: dwa_planner.h  dwa_planner_ros.h
pure_puirsuit_dwa_local_planner/src/: dwa_planner.cpp  dwa_pu_puir_planner_ros.cpp
pure_pursuit_pkg/: CMakeLists.txt  package.xml
teleop/: package.xml
waypoint_navigation/: CMakeLists.txt  package.xml
(+27 files in other folders)
